# xcresult

./: .gitattributes  .gitignore  README.md  azure-pipelines.yml  generate.sh  pylintrc  pyproject.toml  pyrightconfig.json  stylecheck.sh  test.sh
generator/: __init__.py
generator/additional_methods/: ActionTestMetadata.py  ActionTestSummaryGroup.py  ActionTestableSummary.py  DocumentLocation.py  IssueSummary.py  TestFailureIssueSummary.py
tests/: test_additional_coverage.py  test_all_model_classes.py  test_basic.py  test_command_line.py  test_command_line_import_path.py  test_coverage_boost.py  test_final_coverage.py  test_junit_writer.py  test_model.py  test_model_classes.py  test_xcresult_base.py  test_xcresults.py  test_xcresulttool.py  test_xcresulttool_final.py
tests/data/BaseProjectFailure.xcresult/: Info.plist  database.sqlite3
tests/data/BaseProjectFailure.xcresult/Data/: data.0~8Zwg8fIaS9neWRkErVfk69M221LZ_4LWgIc9s3AACUZ_GuDk-SsZQwbe6L1Mq7gr7bq0jciw-OknlpIdvG_tNA==  data.0~U3vqRGPfoc6VziAFNYPT26Y0Zn0dBNt51xM8cVpG1qkZNPFEFAqDfZO0mjA9dLNgWnohIshOSRm-p-11YFzpCA==  data.0~bAUqhI4-4slV25g81JtVqTMgtrKAqrhU7pdyqrwIoDTF7o-G9zmT9Mv0-wvCEO8Ayx6aFXnZiTYuyfU_5UBabg==  refs.0~bAUqhI4-4slV25g81JtVqTMgtrKAqrhU7pdyqrwIoDTF7o-G9zmT9Mv0-wvCEO8Ayx6aFXnZiTYuyfU_5UBabg==
tests/data/Success.xcresult/: Info.plist
tests/data/Success.xcresult/Data/: data.0~Xqa-rHzuC01qbDO1rJU_0ydLibC3T4IAoRVz4xWQeQ3-B1WLrVwLTG2yN_oHZ0uLZQmefpeF73pL7W2Eakdi-g==  data.0~u09b3WdvHpOeCph3agjbxgutfYeHluKve-uyWfdWGJrS_8KtORN8tn7ehnoo673DmohnV45tTRHrDgvkPF5crg==  data.0~zQQ1KbWJMHo48YLZaHuxPPaKTsIN3q8XhqtOPcdafxJVtJ_cc9p4noqIw-sg5vBGdOl_LBiR657QH8LpzMCH1Q==  refs.0~zQQ1KbWJMHo48YLZaHuxPPaKTsIN3q8XhqtOPcdafxJVtJ_cc9p4noqIw-sg5vBGdOl_LBiR657QH8LpzMCH1Q==
tests/data/TestBuildFailure.xcresult/: Info.plist  database.sqlite3
tests/data/TestBuildFailure.xcresult/Data/: data.0~0Yd57dbrdv7k5wFsf0aaOLQtQJTjAEsOJGgcpXO_va36_MeEqREcDxK5MbNrnn4SubfSrjh2q93wDbFOcovoIA==  data.0~4zc8ZS7MsN5AO13J5xV90WiASWU0jMLlsWGheVMhThMQNTXsA78unvUMltPtdbUq5V3vsfTv-gXloxhzeDZDyg==  data.0~6hxkbFrIxuwA_IY3NUyl_ic0Ky7jG1vMeOvbmzwEvKSLtvTJ22ou1AtaUR2bao2xGgeWPBX63ciDTUkLvUsQSg==  data.0~GQraClSn7pnLNOriJ8usfmZkXkjzWlqHk4MFuWdKqm7lcPnfuKWJQ_Nn-AX3VWMS4YJi6kHQbYOdRn8WR6FrXA==  data.0~RP8T6fmo7om65g7EY9VpMK4o_y2r9AO4PYauWdsobMb0dp1YbsGEI4vMQBbqJKvId0nOQnf7fvYDOJIF5_TanA==  data.0~UoZVzVOxSDEVgpQ10NwYOulnkAbEr5ynnzeja27529QpJStieo_a2SgjvzZbniNMIwfY9QU2hEDIMdSHlL_osw==  refs.0~6hxkbFrIxuwA_IY3NUyl_ic0Ky7jG1vMeOvbmzwEvKSLtvTJ22ou1AtaUR2bao2xGgeWPBX63ciDTUkLvUsQSg==  refs.0~7NY0dUFms5AfB_ZGYi4UXABzeNAmNNcj4io-yT4G1pYCO_QclD_AKhNqQV5a2KCNHCMIagLvQ-1Q_vbw5O-nmw==  refs.0~GQraClSn7pnLNOriJ8usfmZkXkjzWlqHk4MFuWdKqm7lcPnfuKWJQ_Nn-AX3VWMS4YJi6kHQbYOdRn8WR6FrXA==
tests/data/TestFailure.xcresult/: Info.plist
tests/data/TestFailure.xcresult/Data/: data.0~-0uUvP8ECqi4WKdZFjDpQFzKMg22kHD_NQ1HlHbwzSkfvzqlyg5EVh0wTF1Uxk-thoL73gsTtxLfKiMQ0OsAkA==  data.0~-4sF25wKRyA78dmEXnFJ7Vpi4VJLhB6nVIxu1c_R_zm_WFUfUu-R_v--quNgnRpakuX-Ea6eXwbDS_3Z1pxe3w==  (+813 more)
tests/data/TestLaunchFailure.xcresult/: Info.plist
tests/data/TestSuccess.xcresult/: Info.plist
xcresult/: __init__.py  command_line.py  exceptions.py  junit_writer.py  model.py  xcresult_base.py  xcresults.py  xcresulttool.py
(+847 files in other folders)
