[tool.poetry]
name = "xcresult"
version = "16.2.1"
description = "An xcresult parser."

license = "MIT"

authors = ["Dale Myers <dale@myers.io>"]

readme = 'README.md'

repository = "https://github.com/dalemyers/xcresult"
homepage = "https://github.com/dalemyers/xcresult"

keywords = ['xcresult', 'parser', 'xcode']

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

[tool.poetry.scripts]
xcresult = 'xcresult:command_line.run'

[tool.poetry.dependencies]
python = "^3.10"
lxml = "^5.0.0"

[tool.poetry.dev-dependencies]
black = "=25.1.0"
mypy = "=1.15.0"
pylint = "=3.3.6"
pytest = "=8.3.2"
pytest-cov = "=5.0.0"
lxml-stubs = "^0.5.1"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
